Project

General

Profile

Actions

Bug #41837

closed

client: lseek function does not return the correct value.

Added by wenpeng li over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If pos is initialized to -1 in the lseek function, then when offset is 0, EINVAL may be returned.


Files

EOVR6WF0C(CIME{[FWUFM67.png (26.4 KB) EOVR6WF0C(CIME{[FWUFM67.png wenpeng li, 09/16/2019 02:40 AM

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #42034: mimic: client: lseek function does not return the correct value.ResolvedNathan CutlerActions
Copied to CephFS - Backport #42035: nautilus: client: lseek function does not return the correct value.ResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly over 4 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to wenpeng li
  • Target version set to v15.0.0
  • Start date deleted (09/16/2019)
  • Source set to Community (dev)
  • Backport set to nautilus,mimic
  • Pull request ID set to 30312
Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Subject changed from client:The lseek function does not return the correct value. to client: lseek function does not return the correct value.
  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42034: mimic: client: lseek function does not return the correct value. added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42035: nautilus: client: lseek function does not return the correct value. added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF