client:EINVAL may be returned when offset is 0 ,Loff_t pos = f->pos should be the best. Fixes:https://tracker.ceph.com/issues/41837 Signed-off-by: wenpengLi <liwenpeng@inspur.com>

(cherry picked from commit 0572e54318cebdfa83d67d47be9a6d110489e808)